Fix: Switched to JSON file for category extraction due to Steam update

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -64,79 +64,79 @@
           <div class="form-group">
             <label for="countryCode" class="form-label">Country and Currency</label>
             <select class="form-control" id="countryCode" required>
-              <option value="au">Australian Dollar</option>
-              <option value="br">Brazilian Real</option>
-              <option value="ca">Canadian Dollar</option>
-              <option value="cl">Chilean Peso</option>
-              <option value="cn">Chinese Yuan</option>
-              <option value="az">CIS - U.S. Dollar</option>
-              <option value="co">Colombian Peso</option>
-              <option value="cr">Costa Rican Colon</option>
-              <option value="eu">Euro</option>
-              <option value="hk">Hong Kong Dollar</option>
-              <option value="in">Indian Rupee</option>
-              <option value="id">Indonesian Rupiah</option>
-              <option value="il">Israeli New Shekel</option>
-              <option value="jp">Japanese Yen</option>
-              <option value="kz">Kazakhstani Tenge</option>
-              <option value="kw">Kuwaiti Dinar</option>
-              <option value="ar">LATAM - U.S. Dollar</option>
-              <option value="my">Malaysian Ringgit</option>
-              <option value="tr">MENA - U.S. Dollar</option>
-              <option value="mx">Mexican Peso</option>
-              <option value="nz">New Zealand Dollar</option>
-              <option value="no">Norwegian Krone</option>
-              <option value="pe">Peruvian Sol</option>
-              <option value="ph">Philippine Peso</option>
-              <option value="pl">Polish Zloty</option>
-              <option value="qa">Qatari Riyal</option>
-              <option value="ru">Russian Ruble</option>
-              <option value="sa">Saudi Riyal</option>
-              <option value="sg">Singapore Dollar</option>
-              <option value="za">South African Rand</option>
-              <option value="kr">South Korean Won</option>
-              <option value="ch">Swiss Franc</option>
-              <option value="tw">Taiwan Dollar</option>
-              <option value="th">Thai Baht</option>
-              <option value="ae">U.A.E. Dirham</option>
-              <option value="us" selected>U.S. Dollar</option>
-              <option value="ua">Ukrainian Hryvnia</option>
-              <option value="uy">Uruguayan Peso</option>
-              <option value="vn">Vietnamese Dong</option>
+                <option value="au">Australian Dollar</option>
+                <option value="br">Brazilian Real</option>
+                <option value="ca">Canadian Dollar</option>
+                <option value="cl">Chilean Peso</option>
+                <option value="cn">Chinese Yuan</option>
+                <option value="az">CIS - U.S. Dollar</option>
+                <option value="co">Colombian Peso</option>
+                <option value="cr">Costa Rican Colon</option>
+                <option value="eu">Euro</option>
+                <option value="hk">Hong Kong Dollar</option>
+                <option value="in">Indian Rupee</option>
+                <option value="id">Indonesian Rupiah</option>
+                <option value="il">Israeli New Shekel</option>
+                <option value="jp">Japanese Yen</option>
+                <option value="kz">Kazakhstani Tenge</option>
+                <option value="kw">Kuwaiti Dinar</option>
+                <option value="ar">LATAM - U.S. Dollar</option>
+                <option value="my">Malaysian Ringgit</option>
+                <option value="tr">MENA - U.S. Dollar</option>
+                <option value="mx">Mexican Peso</option>
+                <option value="nz">New Zealand Dollar</option>
+                <option value="no">Norwegian Krone</option>
+                <option value="pe">Peruvian Sol</option>
+                <option value="ph">Philippine Peso</option>
+                <option value="pl">Polish Zloty</option>
+                <option value="qa">Qatari Riyal</option>
+                <option value="ru">Russian Ruble</option>
+                <option value="sa">Saudi Riyal</option>
+                <option value="sg">Singapore Dollar</option>
+                <option value="za">South African Rand</option>
+                <option value="kr">South Korean Won</option>
+                <option value="ch">Swiss Franc</option>
+                <option value="tw">Taiwan Dollar</option>
+                <option value="th">Thai Baht</option>
+                <option value="ae">U.A.E. Dirham</option>
+                <option value="us" selected>U.S. Dollar</option>
+                <option value="ua">Ukrainian Hryvnia</option>
+                <option value="uy">Uruguayan Peso</option>
+                <option value="vn">Vietnamese Dong</option>
             </select>
           </div>
           <div class="form-group">
             <label for="supportedLanguage" class="form-label">Supported Language</label>
             <select class="form-control" id="supportedLanguage" required>
-              <option value="25">Arabic</option>
-              <option value="22">Brazilian</option>
-              <option value="23">Bulgarian</option>
-              <option value="6">Chinese (Simplified)</option>
-              <option value="7">Chinese (Traditional)</option>
-              <option value="19">Czech</option>
-              <option value="13">Danish</option>
-              <option value="14">Dutch</option>
-              <option value="0" selected>English</option>
-              <option value="15">Finnish</option>
-              <option value="2">French</option>
-              <option value="1">German</option>
-              <option value="24">Greek</option>
-              <option value="18">Hungarian</option>
-              <option value="3">Italian</option>
-              <option value="10">Japanese</option>
-              <option value="4">Korean</option>
-              <option value="16">Norwegian</option>
-              <option value="12">Polish</option>
-              <option value="11">Portuguese</option>
-              <option value="20">Romanian</option>
-              <option value="8">Russian</option>
-              <option value="5">Spanish</option>
-              <option value="27">Spanish (Latam)</option>
-              <option value="17">Swedish</option>
-              <option value="9">Thai</option>
-              <option value="21">Turkish</option>
-              <option value="26">Ukrainian</option>
-              <option value="28">Vietnamese</option>
+                <option value="25">Arabic</option>
+                <option value="22">Brazilian</option>
+                <option value="23">Bulgarian</option>
+                <option value="6">Chinese (Simplified)</option>
+                <option value="7">Chinese (Traditional)</option>
+                <option value="19">Czech</option>
+                <option value="13">Danish</option>
+                <option value="14">Dutch</option>
+                <option value="0" selected>English</option>
+                <option value="15">Finnish</option>
+                <option value="2">French</option>
+                <option value="1">German</option>
+                <option value="24">Greek</option>
+                <option value="18">Hungarian</option>
+                <option value="3">Italian</option>
+                <option value="10">Japanese</option>
+                <option value="4">Korean</option>
+                <option value="16">Norwegian</option>
+                <option value="12">Polish</option>
+                <option value="11">Portuguese</option>
+                <option value="20">Romanian</option>
+                <option value="8">Russian</option>
+                <option value="5">Spanish</option>
+                <option value="27">Spanish (Latam)</option>
+                <option value="17">Swedish</option>
+                <option value="9">Thai</option>
+                <option value="21">Turkish</option>
+                <option value="26">Ukrainian</option>
+                <option value="28">Vietnamese</option>
             </select>
           </div>
           <button type="submit" class="btn btn-primary w-100">Start</button>
@@ -150,6 +150,10 @@
         </div>
       </div>
       <div id="status" class="status-text">Waiting to start...</div>
+    </div>
+    <div id="steam-path-container" class="steam-path-container" style="display: none;">
+        <p id="steam-path-message">Steam folder not found.</p>
+        <button id="select-steam-path-btn" class="btn btn-secondary w-100">Select Steam Folder Manually</button>
     </div>
     <div id="userdata-ids" class="userdata-ids"></div>
   </div>
